--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://wtlyzz2283cxcgmzy8jj:pscale_pw_7UikUnbZFK2MynuIHwQPNhAFJdFN9LCf10dHo31G2fo@aws.connect.psdb.cloud/todo-ujian?sslaccept=strict'
+DATABASE_URL='mysql://o2utusemazuwh8qexzdh:pscale_pw_S3LbemvGm6k3CIopY3tbpOINsjneT39tfDKRWOspA9i@aws.connect.psdb.cloud/todo-ujian?sslaccept=strict'
